# pyscan-stats-resources

./: README.md  pyproject.toml
examples_with_data/: BasicExample.py  PhillyCrime.ipynb  PhillyCrime.py  RegionScanning.ipynb  RegionScanning.py  RegionScanningCont.ipynb  RegionScanningCont.py  RegionSimplification.ipynb  RegionSimplification.py  TrajectoryApproximation.py  TrajectoryFullScanning.ipynb  TrajectoryFullScanning.py  TrajectoryPartialScanning.ipynb  TrajectoryPartialScanning.py
